2008-10-23  Chong Yidong  <cyd@stupidchicken.com>

	* filesets.el: Update author email.
	(filesets-data): Doc fix.

2008-10-23  Jens Petersen  <petersen@redhat.com>

	* pcmpl-rpm.el (pcomplete/rpm): Make "rpm -qp" use file
	completion.

2008-10-23  Ulrich Mueller  <ulm@kph.uni-mainz.de>

	* international/mule-cmds.el (describe-language-environment):
	Indent sample text.

2008-10-23  Glenn Morris  <rgm@gnu.org>

	* pcmpl-rpm.el (pcomplete/rpm): Doc fix.

	* emacs-lisp/cl-macs.el (flet): Throw an error when trying to
	byte-compile a redefinition of a function with special byte-compile
	handling.  (Bug#411)

2008-10-22  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Deal with page sizes for label printes.  Suggested by
	Friedrich Delgado Friedrichs <friedel@nomaden.org>.
	(ps-print-version): New version 7.3.3.
	(ps-page-dimensions-database): New page sizes for label printers.
	(ps-n-up-printing): Fix code.

2008-10-22  Chong Yidong  <cyd@stupidchicken.com>

	* frame.el (make-frame-command): Doc fix.  Use display-graphic-p.

	* thingatpt.el (sexp-at-point, symbol-at-point, number-at-point)
	(list-at-point): Add docstrings.

	* dired.el (dired-get-marked-files, dired-map-over-marks): Doc
	fixes.

	* dired-aux.el (dired-do-create-files): Doc fix.

2008-10-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* version.el (emacs-version): Change '*Step' to 'NS' for consistency
	with other documentation.

2008-10-22  Juanma Barranquero  <lekktu@gmail.com>

	* replace.el (how-many): Fix typo in docstring.
	Reported by Leo <sdl.web@gmail.com>.

2008-10-22  Glenn Morris  <rgm@gnu.org>

	* international/mule-cmds.el (universal-coding-system-argument):
	Check for C-g.  (Bug#1205)

2008-10-22  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Don't setup
	find-word-boundary-function-table.
	(next-word-boundary-han, next-word-boundary-kana): Delete them.
	(word-combining-categories, word-separating-categories): Adjusted
	to the change of the docstrings.
